# Coolgame

./: .gitignore  CMakeLists.txt  README.md
Debug/: cavestory  makefile  sources.mk
Debug/source/src/: AnimatedSprite.d  Game.d  Graphics.d  Input.d  Sprite.d  main.d  subdir.mk
maps/: Map 1.tmx
source/headers/: AnimatedSprite.h  Game.h  Global.h  Graphics.h  Input.h  Level.h  Player.h  Rectangle.h  Sprite.h  Tile.h
source/src/: AnimatedSprite.cpp  Game.cpp  Graphics.cpp  Input.cpp  Level.cpp  Player.cpp  Sprite.cpp  Tile.cpp  main.cpp  tinyxml2.cpp
